--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.ShoppingCartActivity">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/cart_activity_cancel_btn"
@@ -48,6 +47,5 @@
         android:layout_marginTop="@dimen/cart_activity_rv_top_margin"
         >
     </androidx.recyclerview.widget.RecyclerView>
-
 
 </RelativeLayout>
