--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,15 +4,15 @@
 
     <item
         android:id="@+id/book_search_bottom_navigation"
-        android:enabled="true"
         android:icon="@drawable/ic_book_black_24dp"
-        android:title="Book Search"
-        app:showAsAction="ifRoom" />
+        android:title="@string/bottom_navigation_bar_book_search"
+         />
 
     <item
         android:id="@+id/shopping_cart_bottom_navigation"
-        android:enabled="true"
         android:icon="@drawable/ic_shopping_cart_black_24dp"
-        android:title="Shopping cart"
-        app:showAsAction="ifRoom" />
+        android:title="@string/bottom_navigation_bar_shopping_cart"
+         />
+
+<!--    app:showAsAction="ifRoom"-->
 </menu>
