--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,22 @@
     android:orientation="vertical"
     android:background="@color/white80">
 
-    <fragment
-        android:id="@+id/main_navigation_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/possible_bottom_navigation_size"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/application_navigation" />
+        android:layout_above="@+id/bottom_navigation"
+        android:orientation="vertical"
+        >
+
+        <fragment
+            android:id="@+id/main_navigation_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/application_navigation" />
+
+    </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
