--- a/app/src/main/res/layout/fragment_search_for_books.xml
+++ b/app/src/main/res/layout/fragment_search_for_books.xml
@@ -65,7 +65,8 @@
 
     <ProgressBar
         android:id="@+id/main_activity_pb_loading_indicator"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/main_activity_progress_bar_margin_top"
+        android:layout_centerInParent="true"
         android:visibility="invisible"
         android:layout_width="@dimen/main_activity_progress_bar_width"
         android:layout_height="@dimen/main_activity_progress_bar_height" />
