--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="full_book_description_book_nsv_top_margin">5dp</dimen>
     <dimen name="full_book_description_activity_details">21sp</dimen>
+    <dimen name="cart_fragment_number_picker_magrin_bottom">5dp</dimen>
+    <dimen name="cart_fragment_number_picker_text">21sp</dimen>
 </resources>
