--- a/app/src/main/res/layout/fragment_search_for_books_recycler_view_element.xml
+++ b/app/src/main/res/layout/fragment_search_for_books_recycler_view_element.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_element_fl_clickable"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/main_element_padding">
+    android:padding="@dimen/main_element_padding"
+    android:background="@drawable/recycler_view_element_background">
 
     <LinearLayout
-        android:id="@+id/main_element_ll_clickable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -16,7 +17,6 @@
             android:id="@+id/main_element_iv_book_icon"
             android:layout_width="@dimen/main_recycler_view_element_lv_max_width"
             android:layout_height="@dimen/main_recycler_view_element_lv_max_height"
-            android:background="@color/white80"
             android:scaleType="fitXY"
             android:src = "@drawable/no_book_image_icon"
             android:layout_gravity="center_vertical"
